<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmv_library</name>
  <version>0.0.0</version>
  <description>rmv_library packages regrouping utilities for rmv</description>
  <maintainer email="emerytognama@gmail.com">Emery-donald Tognama</maintainer>
  <license>Copyright (c) 2025 [Tognama Emery-donald]</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
    <test_depend>pytest</test_depend>
  </export>
</package>
