<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmv_visualization</name>
  <version>0.0.0</version>
  <description>'Visualization package'</description>
  <maintainer email="emerytognama@gmail.com">Emery-donald Tognama</maintainer>
  <license>Copyright (c) 2025 [Tognama Emery-donald]</license>

  <depend>rmv_library</depend>
  <depend>image_transport</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <test_depend>pytest</test_depend>
  </export>
</package>
